Fix lights_hanging_lamp and lights_signal_light class names. Close #4.

--- a/res/gamedata/configs/system.ltx
+++ b/res/gamedata/configs/system.ltx
@@ -149,14 +149,14 @@ slot_active_12      = false
 [lights_hanging_lamp]
 GroupControlSection = spawn_group
 $spawn        = "physics\hanging lamp"
-class       = SO_HLAMP
+class       = O_HLAMP
 script_binding      = bind_physic_object.init
 
 
 [lights_signal_light]
 GroupControlSection = spawn_group
 $spawn        = "physics\signal_light"
-class       = SO_HLAMP
+class       = O_HLAMP
 script_binding      = bind_signal_light.init
 
 
