--- a/src/editors/xrSdkControls/Controls/ColorPicker/ColorPicker.resx
+++ b/src/editors/xrSdkControls/Controls/ColorPicker/ColorPicker.resx
@@ -153,6 +153,14 @@
   <metadata name="pbColor.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pbColor.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAkSURBVDhPY/hPANTX1+PFowYMDwMaGhr+48OEwKgBw8CA
+        //8Btf487uE168cAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="numAlpha.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
