= res/gamedata/configs/misc/items.ltx added the new fields with defaults: ;New fields use_condition                            = false max_uses                                 = 1 remove_after_use                         = true empty_weight                             = 0.1 allow_repair                             = false

--- a/res/gamedata/configs/misc/items.ltx
+++ b/res/gamedata/configs/misc/items.ltx
@@ -49,7 +49,12 @@ boost_explosion_immunity	= 0.0
 boost_fire_wound_immunity	= 0.0
 ;use_sound			= characters_voice\multiplayer\team_1\voice_roger_3
 
-
+;New fields in Open Xray
+use_condition                            = false
+max_uses                                 = 1
+remove_after_use                         = true
+empty_weight                             = 0.1
+allow_repair                             = false
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;	FOOD
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
