Allow to capture corpses

--- a/res/gamedata/configs/system.ltx
+++ b/res/gamedata/configs/system.ltx
@@ -694,103 +694,102 @@ swing_fast_rot1   = 5
 swing_fast_rot2   = .5;0.75
 swing_fast_speed  = 0.5;1
 
+;Список объектов которые можно таскать.
 [ph_capture_visuals]
 
-;Список объектов которые можно таскать.
-
 ;NPC
-;actors\stalker_bandit\stalker_bandit_1
-;actors\stalker_bandit\stalker_bandit_2
-;actors\stalker_bandit\stalker_bandit_3
-;actors\stalker_bandit\stalker_bandit_3_face_1
-;actors\stalker_bandit\stalker_bandit_3_face_2
-;actors\stalker_bandit\stalker_bandit_3_mask
-;actors\stalker_bandit\stalker_bandit_4
-;actors\stalker_dolg\stalker_dolg_1
-;actors\stalker_dolg\stalker_dolg_2
-;actors\stalker_dolg\stalker_dolg_2_face_1
-;actors\stalker_dolg\stalker_dolg_2_face_2
-;actors\stalker_dolg\stalker_dolg_2_mask
-;actors\stalker_dolg\stalker_dolg_3
-;actors\stalker_dolg\stalker_dolg_4
-;actors\stalker_freedom\stalker_freedom_1
-;actors\stalker_freedom\stalker_freedom_2
-;actors\stalker_freedom\stalker_freedom_2_face_1
-;actors\stalker_freedom\stalker_freedom_2_face_2
-;actors\stalker_freedom\stalker_freedom_2_mask
-;actors\stalker_freedom\stalker_freedom_3
-;actors\stalker_freedom\stalker_freedom_4
-;actors\stalker_hero\stalker_hero_1
-;actors\stalker_hero\stalker_hero_stc_strelok
-;actors\stalker_lesnik\stalker_lesnik_1
-;actors\stalker_merc\stalker_merc_2
-;actors\stalker_merc\stalker_merc_4
-;actors\stalker_monolith\stalker_monolith_1
-;actors\stalker_monolith\stalker_monolith_2
-;actors\stalker_monolith\stalker_monolith_3
-;actors\stalker_monolith\stalker_monolith_4
-;actors\stalker_nebo\stalker_nebo_1
-;actors\stalker_nebo\stalker_nebo_2
-;actors\stalker_nebo\stalker_nebo_2_face_1
-;actors\stalker_nebo\stalker_nebo_2_face_2
-;actors\stalker_nebo\stalker_nebo_2_face_3
-;actors\stalker_nebo\stalker_nebo_2_mask
-;actors\stalker_nebo\stalker_nebo_3
-;actors\stalker_neutral\stalker_neutral_1
-;actors\stalker_neutral\stalker_neutral_2
-;actors\stalker_neutral\stalker_neutral_2_face_1
-;actors\stalker_neutral\stalker_neutral_2_face_2
-;actors\stalker_neutral\stalker_neutral_2_mask
-;actors\stalker_neutral\stalker_neutral_3
-;actors\stalker_neutral\stalker_neutral_4
-;actors\stalker_soldier\stalker_soldier_1
-;actors\stalker_soldier\stalker_soldier_2
-;actors\stalker_soldier\stalker_soldier_2_face_1
-;actors\stalker_soldier\stalker_soldier_3
-;actors\stalker_soldier\stalker_soldier_4
-;actors\stalker_trader\stalker_trader_1
-;actors\stalker_ucheniy\stalker_ucheniy_1
-;actors\stalker_zombied\stalker_zombied_1
-;actors\stalker_zombied\stalker_zombied_2
-;actors\stalker_zombied\stalker_zombied_3
-;actors\stalker_zombied\stalker_zombied_4
+actors\stalker_bandit\stalker_bandit_1
+actors\stalker_bandit\stalker_bandit_2
+actors\stalker_bandit\stalker_bandit_3
+actors\stalker_bandit\stalker_bandit_3_face_1
+actors\stalker_bandit\stalker_bandit_3_face_2
+actors\stalker_bandit\stalker_bandit_3_mask
+actors\stalker_bandit\stalker_bandit_4
+actors\stalker_dolg\stalker_dolg_1
+actors\stalker_dolg\stalker_dolg_2
+actors\stalker_dolg\stalker_dolg_2_face_1
+actors\stalker_dolg\stalker_dolg_2_face_2
+actors\stalker_dolg\stalker_dolg_2_mask
+actors\stalker_dolg\stalker_dolg_3
+actors\stalker_dolg\stalker_dolg_4
+actors\stalker_freedom\stalker_freedom_1
+actors\stalker_freedom\stalker_freedom_2
+actors\stalker_freedom\stalker_freedom_2_face_1
+actors\stalker_freedom\stalker_freedom_2_face_2
+actors\stalker_freedom\stalker_freedom_2_mask
+actors\stalker_freedom\stalker_freedom_3
+actors\stalker_freedom\stalker_freedom_4
+actors\stalker_hero\stalker_hero_1
+actors\stalker_hero\stalker_hero_stc_strelok
+actors\stalker_lesnik\stalker_lesnik_1
+actors\stalker_merc\stalker_merc_2
+actors\stalker_merc\stalker_merc_4
+actors\stalker_monolith\stalker_monolith_1
+actors\stalker_monolith\stalker_monolith_2
+actors\stalker_monolith\stalker_monolith_3
+actors\stalker_monolith\stalker_monolith_4
+actors\stalker_nebo\stalker_nebo_1
+actors\stalker_nebo\stalker_nebo_2
+actors\stalker_nebo\stalker_nebo_2_face_1
+actors\stalker_nebo\stalker_nebo_2_face_2
+actors\stalker_nebo\stalker_nebo_2_face_3
+actors\stalker_nebo\stalker_nebo_2_mask
+actors\stalker_nebo\stalker_nebo_3
+actors\stalker_neutral\stalker_neutral_1
+actors\stalker_neutral\stalker_neutral_2
+actors\stalker_neutral\stalker_neutral_2_face_1
+actors\stalker_neutral\stalker_neutral_2_face_2
+actors\stalker_neutral\stalker_neutral_2_mask
+actors\stalker_neutral\stalker_neutral_3
+actors\stalker_neutral\stalker_neutral_4
+actors\stalker_soldier\stalker_soldier_1
+actors\stalker_soldier\stalker_soldier_2
+actors\stalker_soldier\stalker_soldier_2_face_1
+actors\stalker_soldier\stalker_soldier_3
+actors\stalker_soldier\stalker_soldier_4
+actors\stalker_trader\stalker_trader_1
+actors\stalker_ucheniy\stalker_ucheniy_1
+actors\stalker_zombied\stalker_zombied_1
+actors\stalker_zombied\stalker_zombied_2
+actors\stalker_zombied\stalker_zombied_3
+actors\stalker_zombied\stalker_zombied_4
 
 ;Monsters
-;monsters\controller\controller_1
-;monsters\controller\controller_2
-;monsters\controller\controller_3
-;monsters\controller\controller_4
-;monsters\controller\controller_dead
-;monsters\crow\crow
-;monsters\dog\dog
-;monsters\dog\dog_bulterier
-;monsters\dog\dog_bulterier_dead
-;monsters\dog\dog_dead
-;monsters\dog\dog_red
-;monsters\dog\dog_red_dead
-;monsters\dog\dog_white
-;monsters\dog\dog_white_dead
-;monsters\flesh\flesh
-;monsters\flesh\flesh_dead
-;monsters\flesh\flesh_strong
-;monsters\krovosos\krovosos
-;monsters\krovosos\krovosos_dead
-;monsters\krovosos\krovosos_strong
-;monsters\krovosos\krovosos_strong_xray
-;monsters\krovosos\krovosos_xray
-;monsters\mutant_boar\mutant_boar
-;monsters\mutant_boar\mutant_boar_dead
-;monsters\mutant_boar\mutant_boar_strong
-;monsters\poltergeist\poltergeist
-;monsters\poltergeist\poltergeist_dead
-;monsters\poltergeist\poltergeist_strong
-;monsters\pseudodog\pseudodog
-;monsters\pseudodog\pseudodog_dead
-;monsters\pseudodog\pseudodog_grey
-;monsters\pseudodog\pseudodog_grey_dead
-;monsters\rat\rat_1
-;monsters\snork\snork
-;monsters\snork\snork_dead
-;monsters\tushkano\tushkano
-;monsters\tushkano\tushkano_dead
+monsters\controller\controller_1
+monsters\controller\controller_2
+monsters\controller\controller_3
+monsters\controller\controller_4
+monsters\controller\controller_dead
+monsters\crow\crow
+monsters\dog\dog
+monsters\dog\dog_bulterier
+monsters\dog\dog_bulterier_dead
+monsters\dog\dog_dead
+monsters\dog\dog_red
+monsters\dog\dog_red_dead
+monsters\dog\dog_white
+monsters\dog\dog_white_dead
+monsters\flesh\flesh
+monsters\flesh\flesh_dead
+monsters\flesh\flesh_strong
+monsters\krovosos\krovosos
+monsters\krovosos\krovosos_dead
+monsters\krovosos\krovosos_strong
+monsters\krovosos\krovosos_strong_xray
+monsters\krovosos\krovosos_xray
+monsters\mutant_boar\mutant_boar
+monsters\mutant_boar\mutant_boar_dead
+monsters\mutant_boar\mutant_boar_strong
+monsters\poltergeist\poltergeist
+monsters\poltergeist\poltergeist_dead
+monsters\poltergeist\poltergeist_strong
+monsters\pseudodog\pseudodog
+monsters\pseudodog\pseudodog_dead
+monsters\pseudodog\pseudodog_grey
+monsters\pseudodog\pseudodog_grey_dead
+monsters\rat\rat_1
+monsters\snork\snork
+monsters\snork\snork_dead
+monsters\tushkano\tushkano
+monsters\tushkano\tushkano_dead
 
