Add 5 custom slots

--- a/res/gamedata/configs/system.ltx
+++ b/res/gamedata/configs/system.ltx
@@ -107,7 +107,7 @@ take_dist   	= 2
 max_weight    	= 50
 max_ruck    	= 56
 max_belt    	= 5 ;16
-slots_count   	= 12 ; count +1 (zero)
+slots_count   	= 17 ; count +1 (zero)
 
 slot_persistent_1   = true   ;knife
 slot_active_1       = true
@@ -145,6 +145,16 @@ slot_active_11      = true
 slot_persistent_12  = false ;helmet
 slot_active_12      = false
 
+slot_persistent_13 = true ; custom
+slot_active_13 = true
+slot_persistent_14 = true ; custom
+slot_active_14 = true
+slot_persistent_15 = true ; custom
+slot_active_15 = true
+slot_persistent_16 = true ; custom
+slot_active_16 = true
+slot_persistent_17 = true ; custom
+slot_active_17 = true
 
 [lights_hanging_lamp]
 GroupControlSection = spawn_group
