Fixes for previous commits

--- a/res/gamedata/configs/system.ltx
+++ b/res/gamedata/configs/system.ltx
@@ -299,20 +299,20 @@ rot_speed                = 3.14, 3.14, 0
 lim_pitch                = -1.5, 1.5
 lim_yaw                  = -1.0, 1.0
 rot_speed                = 3.14, 3.14, 0
-
+first_person_zoom		 = false
 [actor_free_cam]
 ;----------------
 lim_pitch                = -1.5, 1.5
 lim_yaw                  = 0, 0
 lim_zoom                 = 0.4, 10
 rot_speed                = 3.14, 1.0, 10
-
+first_person_zoom		 = false
 [actor_look_cam]
 lim_pitch                = -0.7, 1
 lim_yaw                  = 0, 0
 lim_zoom                 = 1, 5
 rot_speed                = 3.14, 6.28, 10
-
+first_person_zoom		 = true
 [actor_look_cam_psp]
 lim_pitch                = -0.7, 1
 lim_yaw                  = 0, 0
@@ -321,47 +321,47 @@ rot_speed                = 2, 2, 2
 offset          = 0.4,0.2,-1.1
 autoaim_speed_y     = 0.5, 3.14    ;min,max speed
 autoaim_speed_x     = 0.5, 3.14
-
+first_person_zoom		 = true
 [mounted_weapon_cam]
 lim_pitch                = -0.5, 0.5
 lim_yaw                  = -2.0, 2.0
 rot_speed                = 3.14, 1.0, 0
-
+first_person_zoom		 = false
 [car_firsteye_cam]
 lim_pitch                = -0.5, 0.3
 lim_yaw                  = -2.0, 2.0
 rot_speed                = 3.14, 1.0, 0
-
+first_person_zoom		 = false
 [car_free_cam]
 lim_pitch                = -1, 1.56 ;0, 1.56
 lim_yaw                  = 0, 0 ;0, 0
 lim_zoom                 = 1, 10 ;1, 7
 rot_speed                = 3.14, 1.0, 10 ;3.14, 1.0, 10
-
+first_person_zoom		 = false
 [car_look_cam]
 lim_pitch                = 0, 1.56
 lim_yaw                  = 0  , 0
 lim_zoom                 = 1, 7
 rot_speed                = 25, 1.0, 10
-
+first_person_zoom		 = true
 [heli_free_cam]
 lim_pitch                = -1.5, 1.5
 lim_yaw                  = 0, 0
 lim_zoom                 = 5, 25
 rot_speed                = 3.14, 1.0, 10
-
+first_person_zoom		 = false
 [heli_front_cam]
 ;lim_yaw    = -0.01,0.01
 lim_pitch                = -1.2, 1.2
 lim_yaw                  = -1.5, 1.5
 rot_speed                = 3.14, 1.5, 0
-
+first_person_zoom		 = false
 [heli_look_cam]
 lim_pitch                = 0, 1.56
 lim_yaw                  = 0, 0
 lim_zoom                 = 5, 15
 rot_speed                = 3.14, 1.0, 10
-
+first_person_zoom		 = false
 [interface]
 font_game                = font_game
 font_small               = font_small
