--- a/res/gamedata/configs/weapons/upgrades/w_fn2000_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_fn2000_up.ltx
@@ -166,7 +166,7 @@ fire_dispersion_base    = -0.01
 [up_sect_fourta_fn2000]
 cost		      		= 1800
 
-scope_zoom_factor       = -35   
+scope_zoom_factor       = +2.4  
 
 [up_sect_fourtc_fn2000]
 cost		      		= 3000
