--- a/res/gamedata/configs/weapons/upgrades/w_g36_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_g36_up.ltx
@@ -137,7 +137,7 @@ fire_dispersion_condition_factor    = -1 ;15
 ;------------------
 cost		      		= 1200
 
-scope_zoom_factor       = -15   
+scope_zoom_factor       = +0   
 
 [up_sect_fourtc_g36]
 ;Контрастный прицел
