--- a/res/gamedata/configs/weapons/upgrades/w_l85_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_l85_up.ltx
@@ -145,7 +145,7 @@ fire_dispersion_condition_factor    = -1 ;15
 [up_sect_fourta_l85]
 cost		      		= 1000
 
-scope_zoom_factor       = -15    
+scope_zoom_factor       = +1.6    
 
 [up_sect_fourtc_l85]
 cost		      		= 1500
