--- a/res/gamedata/configs/weapons/upgrades/w_svd_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_svd_up.ltx
@@ -125,7 +125,7 @@ zoom_cam_relax_speed        = +0.05
 ;------------
 cost		      		= 2100
 
-scope_zoom_factor       = -10   
+scope_zoom_factor       = +2   
 
 [up_sect_fourtc_svd]
 ;Контрастный прицел
