--- a/res/gamedata/configs/weapons/upgrades/w_svu_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_svu_up.ltx
@@ -132,7 +132,7 @@ PDM_disp_accel_factor 		= -1.5
 ;------------
 cost		      		= 2000
 
-scope_zoom_factor       = -10  
+scope_zoom_factor       = +1  
 
 [up_sect_fourtc_svu]
 ;Контрастный прицел
