--- a/res/gamedata/configs/weapons/upgrades/w_vintorez_up.ltx
+++ b/res/gamedata/configs/weapons/upgrades/w_vintorez_up.ltx
@@ -155,7 +155,7 @@ zoom_cam_step_angle_horz     = -0.1	;0.5
 ;------------------
 cost		      		= 1500
 
-scope_zoom_factor       = -5  
+scope_zoom_factor       = +1  
 
 [up_sect_fourtc_vintorez]
 ;Контрастный прицел
