--- a/res/gamedata/configs/weapons/w_knife.ltx
+++ b/res/gamedata/configs/weapons/w_knife.ltx
@@ -136,6 +136,12 @@ spash2_radius			= 0.3
 
 splash_bone				= bip01_spine1
 
+splash1_hits_count 		= 0
+splash2_hits_count		= 0
+
+splash1_pervictim_hcount = 0
+splash_hit_divide_factor = 0.1
+
 ;-------------------------------------------------------------------------------
 hud                     = wpn_knife_hud
 visual                  = dynamics\weapons\wpn_knife\wpn_knife.ogf
