--- a/res/gamedata_COC/configs/localization.ltx
+++ b/res/gamedata_COC/configs/localization.ltx
@@ -1,4 +1,8 @@
 [string_table]
         font_prefix                      =
         language                         = eng
+		
+[Languages]
+eng
+rus
  
