~ Обновил lfs ~ Исправил вылет на зп из-за отсутствия heli_firsteye_cam ~ VERIFY_FAILED теперь выводится без имени функции

--- a/res/gamedata/configs/system.ltx
+++ b/res/gamedata/configs/system.ltx
@@ -345,12 +345,16 @@ lim_yaw                  = 0  , 0
 lim_zoom                 = 1, 7
 rot_speed                = 25, 1.0, 10
 first_person_zoom		 = true
+[heli_firsteye_cam]
+lim_pitch                = -0.5, 1.0
+lim_yaw                  = -2.0, 2.0
+rot_speed                = 3.14, 1.0, 0
 [heli_free_cam]
 lim_pitch                = -1.5, 1.5
 lim_yaw                  = 0, 0
 lim_zoom                 = 5, 25
 rot_speed                = 3.14, 1.0, 10
-first_person_zoom		 = false
+first_person_zoom		 = true
 [heli_front_cam]
 ;lim_yaw    = -0.01,0.01
 lim_pitch                = -1.2, 1.2
@@ -362,7 +366,7 @@ lim_pitch                = 0, 1.56
 lim_yaw                  = 0, 0
 lim_zoom                 = 5, 15
 rot_speed                = 3.14, 1.0, 10
-first_person_zoom		 = false
+first_person_zoom		 = true
 [interface]
 font_game                = font_game
 font_small               = font_small
