= Moved CheckForMisfire method to after the shot to fix issue with tri-state reload weapons = invalidate weather entirely and force stop sound ~ Hide several log 'Msg' behind -verboselog command line option ~ Replace -dbg with -dev for things like teleport to democam = Fix NPC reaction to car weapon by v2v3v4 + Added snd_turn_on and snd_turn_off + Added light_section, which can point to new section in models\objects\light_night.ltx + In light_section, Added volumetric_for_actor (true or false), volumetric, volumetric_quality, volumetric_intensity and volumetric_distance fields ~ Third-person camera adjustment (Roman-n and v2v3v4) = FIX uninitialized 'flags' ~ When hovering over status progress bar in Inventory screen, you will now see 'description: current/max' in the hint window = Fix hand_offset_pos console command = Clamp vertical angle so that negative cam dispersion does not make weapon go down
Co-Authored-By: Revo Lucas <revolucas@gmail.com>

--- a/res/gamedata/configs/misc/items.ltx
+++ b/res/gamedata/configs/misc/items.ltx
@@ -223,9 +223,8 @@ cform                   = skeleton
 class					= II_ATTCH
 visual                  = dynamics\devices\dev_harmonica\dev_harmonica.ogf
 cost					= 35
-inv_name				= st_harmonica_name
-inv_name_short			= st_harmonica_name
-description				= st_harmonica_descr
+inv_name				= "harmonica"
+inv_name_short			= "harmonica"
 inv_weight				= 0.35
 inv_grid_width			= 1
 inv_grid_height			= 1
@@ -710,6 +709,8 @@ attach_position_offset		= 0.134, -0.007, 0.09
 
 attach_bone_name		= bip01_head
 auto_attach			= false
+
+;light_section				= torch_definition_volumetric	; The light section to use in it's model/objects/light_night.ltx
 
 night_vision				= on
 night_vision_texture		= wpn\wpn_night
