--- a/res/gamedata_COC/configs/items/items_devices.ltx
+++ b/res/gamedata_COC/configs/items/items_devices.ltx
@@ -89,6 +89,7 @@ cform                                    = skeleton
 visual                                   = dynamics\devices\dev_torch_light\dev_torch_light.ogf
 description                              = st_device_torch_descr
 cost                                     = 0
+;light_section							 = torch_definition_volumetric	; The light section to use in it's model/objects/light_night.ltx
 inv_name                                 = st_device_torch_name
 inv_name_short                           = st_device_torch_name
 inv_weight                               = 0.0
