--- a/res/gamedata_COC/configs/items/items_cooking.ltx
+++ b/res/gamedata_COC/configs/items/items_cooking.ltx
@@ -1,4 +1,4 @@
-[charcoal]:booster_script
+[charcoal]:booster
 $spawn 					= "cooking\charcoal"
 cost					= 1000
 description				= st_charcoal_descr
@@ -15,7 +15,7 @@ remove_after_use       	= true
 use_condition           = true
 visual					= dynamics\cooking\charcoal.ogf
 
-[wood_stove]:booster_script
+[wood_stove]:booster
 $spawn					= "cooking\wood_stove"
 cost					= 2000
 description				= st_wood_stove_descr
