--- a/res/gamedata_COC/configs/items/items_drink.ltx
+++ b/res/gamedata_COC/configs/items/items_drink.ltx
@@ -1,4 +1,4 @@
-[vodka]:booster_script
+[vodka]:booster
 $spawn                                   = "food and drugs\vodka"
 cform                                    = skeleton
 visual                                   = dynamics\devices\dev_vodka\dev_vodka.ogf
