--- a/res/gamedata_COC/configs/items/items_food.ltx
+++ b/res/gamedata_COC/configs/items/items_food.ltx
@@ -1,6 +1,6 @@
 ; FOOD
 
-[bread]:booster_script
+[bread]:booster
 $spawn                                   = "food and drugs\bread"
 visual                                   = dynamics\devices\dev_bred\dev_bred.ogf
 description                              = st_bread_descr
@@ -32,7 +32,7 @@ use_sound                                = interface\inv_food
 
 hide_time_wpn = 3
 
-[kolbasa]:booster_script
+[kolbasa]:booster
 $spawn                                   = "food and drugs\kolbasa"
 visual                                   = dynamics\devices\dev_kolbasa\dev_kolbasa.ogf
 description                              = st_kolbasa_descr
@@ -64,7 +64,7 @@ use_sound                                = interface\inv_food
 
 hide_time_wpn = 3
 
-[conserva]:booster_script
+[conserva]:booster
 $spawn                                   = "food and drugs\conserva"
 visual                                   = dynamics\devices\dev_conserv\dev_conserv.ogf
 description                              = st_conserva_descr
@@ -94,7 +94,7 @@ hide_time_wpn = 3
 
 ; ZONE-PRODUCED FOOD
 
-[meat_base]:booster_script
+[meat_base]:booster
 attach_angle_offset                      = 0.440521, 1.378287, -0.644026
 attach_position_offset                   = 0.104196, -0.010821, 0.076969
 attach_bone_name                         = bip01_r_hand
