--- a/res/gamedata_COC/configs/items/items_medical.ltx
+++ b/res/gamedata_COC/configs/items/items_medical.ltx
@@ -48,7 +48,7 @@ use_sound                                = interface\inv_pills
 
 hide_time_wpn = 3
 
-[medkit]:booster_script
+[medkit]:booster
 $spawn                                   = "food and drugs\medkit"
 visual                                   = dynamics\devices\dev_aptechka\dev_aptechka_low.ogf
 inv_name                                 = st_medkit
@@ -76,7 +76,7 @@ empty_weight                             = 0.02
 
 hide_time_wpn = 5
 
-[medkit_army]:booster_script
+[medkit_army]:booster
 $spawn                                   = "food and drugs\medkit_army"
 visual                                   = dynamics\devices\dev_aptechka\dev_aptechka_high.ogf
 inv_name                                 = st_medkit_army
@@ -104,7 +104,7 @@ empty_weight                             = 0.02
 
 hide_time_wpn = 5
 
-[medkit_scientic]:booster_script
+[medkit_scientic]:booster
 $spawn                                   = "food and drugs\medkit_scientic"
 visual                                   = dynamics\devices\dev_aptechka\dev_aptechka_mid.ogf
 inv_name                                 = st_medkit_science
