--- a/res/gamedata_COC/configs/items/items_monster.ltx
+++ b/res/gamedata_COC/configs/items/items_monster.ltx
@@ -235,7 +235,7 @@ cost                                     = 200
 
 ; EATABLE MONSTER ITEMS
 
-[mutant_part_general_meat]:booster_script
+[mutant_part_general_meat]:booster
 $spawn                                   = "devices\monster_items\mutant_part_general"
 visual                                   = dynamics\zpf\raw_flesh.ogf
 
