--- a/res/gamedata_COC/configs/items/items_repair.ltx
+++ b/res/gamedata_COC/configs/items/items_repair.ltx
@@ -1,4 +1,4 @@
-[itm_gunsmith_toolkit]:booster_script
+[itm_gunsmith_toolkit]:booster
 $spawn                                   = "devices\repair_kit_10"
 description                              = st_itm_gunsmith_toolkit_descr
 inv_name                                 = st_itm_gunsmith_toolkit
