--- a/res/gamedata_COC/configs/items/items_utility.ltx
+++ b/res/gamedata_COC/configs/items/items_utility.ltx
@@ -1,4 +1,4 @@
-[test_container]:booster_script
+[test_container]:booster
 class 									 = S_FOOD
 use1_action_functor                      = bind_container.access_inventory
 use1_functor                             = bind_container.can_access_inventory
@@ -72,7 +72,7 @@ animation_slot                           = 4
 hud                                      = wpn_vodka_hud
 slot                                     = -1
 
-[matches]:booster_script
+[matches]:booster
 $spawn 					= "misc\matches"
 visual					= dynamics\drink\drink_match0.ogf
 use_condition       	= true
