*res*  + grenade_class
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/5940ad9fd28563b1852a05f980b9d98a82d2a224

--- a/res/gamedata_COC/configs/weapons/weapons_addons.ltx
+++ b/res/gamedata_COC/configs/weapons/weapons_addons.ltx
@@ -312,6 +312,7 @@ inv_grid_y                               = 9
 grenade_vel                              = 44
 
 addon_bone								 = wpn_launcher
+grenade_class							 = ammo_vog-25
 
 [wpn_addon_grenade_launcher_m203]:identity_immunities
 GroupControlSection                      = spawn_group
@@ -335,6 +336,7 @@ inv_grid_y                               = 9
 grenade_vel                              = 44
 
 addon_bone								 = wpn_launcher
+grenade_class							 = ammo_m209
 
 ;Advanced scope settings
 
