*res* add silencer light values in upgrade sections
------------------------------------------------------------------
 commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/3884d6088dce81fa2d6050c4c97d5b2c17a91813

--- a/res/gamedata_COC/configs/weapons/upgrades/w_l85_up.ltx
+++ b/res/gamedata_COC/configs/weapons/upgrades/w_l85_up.ltx
@@ -116,6 +116,11 @@ silencer_name  			= wpn_addon_silencer
 silencer_x 				= 196
 silencer_y 				= 11
 snd_silncer_shot        = weapons\w_ak74_shot1
+silencer_light_color                     = 0.6,0.5,0.3
+silencer_light_range                     = 0.01
+silencer_light_time                      = 0.2
+silencer_light_var_color                 = 0.05
+silencer_light_var_range                 = 0.5
 
 [up_sect_fifthc_l85]
 cost		      		= 2500
