--- a/res/gamedata_COC/configs/weapons/upgrades/w_beretta_up.ltx
+++ b/res/gamedata_COC/configs/weapons/upgrades/w_beretta_up.ltx
@@ -110,6 +110,11 @@ silencer_status             = 2
 silencer_name  				= wpn_addon_silencer		; section name for the attachable silencer
 silencer_x 					= 56					; offset in inventory icon
 silencer_y 					= -15
+silencer_light_color                     = 0.6,0.5,0.3
+silencer_light_range                     = 0.01
+silencer_light_time                      = 0.2
+silencer_light_var_color                 = 0.05
+silencer_light_var_range                 = 0.5
 
 [up_sect_fifthc_beretta]
 cost		      		= 1500
