--- a/res/gamedata_COC/configs/weapons/upgrades/w_svu_up.ltx
+++ b/res/gamedata_COC/configs/weapons/upgrades/w_svu_up.ltx
@@ -65,6 +65,11 @@ silencer_x              = 224
 silencer_y              = 13
 snd_silncer_shot        = weapons\w_ak74_shot1
 silencer_smoke_particles   = weapons\generic_shoot_00
+silencer_light_color                     = 0.6,0.5,0.3
+silencer_light_range                     = 0.01
+silencer_light_time                      = 0.2
+silencer_light_var_color                 = 0.05
+silencer_light_var_range                 = 0.5
 
 [up_sect_seconf_svu]
 cost		      		= 6000
