*res* = Fix binoc not remembering zoom level
because dynamic zoom wasn't enabled
= Adjust actor visual memory
----------------------------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/b16d081ec10028c8abff6f831b0425f737e64183

--- a/res/gamedata_COC/configs/weapons/w_binoc.ltx
+++ b/res/gamedata_COC/configs/weapons/w_binoc.ltx
@@ -82,6 +82,7 @@ rpm_empty_click                          = 1
 scheduled                                = off
 scope_status                             = 1
 scope_texture                            = wpn_crosshair_bino
+scope_dynamic_zoom						 = true
 scope_zoom_factor                        = 7.5
 shell_dir                                = 0.0, 0.0, 0.4
 shell_particles                          = weapons\fake_shells
