*res* prop_armor now based on the dummy max_fire_wound_protection value,
just like the engine value
--------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/1c823e656813a9a1e9b08ff740a0634d11769521?at=main

--- a/res/gamedata_COC/configs/creatures/actor.ltx
+++ b/res/gamedata_COC/configs/creatures/actor.ltx
@@ -246,7 +246,7 @@ psi_zone_max_power			= 0.1
 electra_zone_max_power		= 0.7
 
 max_power_restore_speed		= 0.02
-max_fire_wound_protection	= 0.6
+max_fire_wound_protection	= 0.6			;DUMMY! Used only for bone armor / max_fire_wound_protection for Outfit UI display
 max_wound_protection		= 0.5
 
 hud_health_blink        = 0.05
