*res* Sergeant Spooner now offers a task to eliminate
mutants on the entire level in Agroprom using the hind helicopter
---------------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/9b2b92efcf7312e59e5c39fcdcb22d55556c3b41?at=main

--- a/res/gamedata_COC/configs/creatures/helicopter.ltx
+++ b/res/gamedata_COC/configs/creatures/helicopter.ltx
@@ -108,7 +108,7 @@ light_var_color			= 0.05
 light_var_range			= 0.5
 light_time 				= 0.2
 ammo_class				= ammo_12x76_zhekan_heli ;ammo_12x70_buck
-flame_particles		    = weapons\heli_weapon
+flame_particles		    = weapons\generic_weapon05	;weapons\heli_weapon
 ;smoke_particles		= weapons\generic_shoot_00
 shell_point				= 0.05, 0.22, 0.06
 shell_particles			= weapons\generic_shells
