--- a/res/gamedata_COC/configs/misc/tm_agroprom.ltx
+++ b/res/gamedata_COC/configs/misc/tm_agroprom.ltx
@@ -64,6 +64,28 @@ on_complete = %=reward_random_money(7500:8500) =reward_stash(true) =inc_task_sta
 
 
 ;--------------------------------------------------------------------------------------------------
+; ELMINATE ALL MUTANTS IN GUNSHIP FOR MILITARY TASK-
+
+[agr_smart_terrain_1_6_army_trader_stalker_task_4]
+icon = ui_inGame2_Evakuatsiya
+prior = 35
+storyline = false
+title = agr_smart_terrain_1_6_army_trader_stalker_task_4_name
+descr = agr_smart_terrain_1_6_army_trader_stalker_task_4_text
+job_descr = agr_smart_terrain_1_6_army_trader_stalker_task_4_about
+task_complete_descr = agr_smart_terrain_1_6_army_trader_stalker_task_4_finish
+precondition = {=heli_exist_on_level =any_on_level(monster)} true, false
+repeat_timeout = 172800
+status_functor = check_level_under_faction_control
+status_functor_params = monster
+target_functor = level_all_of_faction
+stage_complete = 1
+on_init = %=on_init_heli_hunt(agr_smart_terrain_1_6_army_trader_stalker_task_4)%
+on_complete = %=exit_heli =reward_random_money(8500:9500) =reward_stash(true) =inc_task_stage(agr_smart_terrain_1_6_army_trader_stalker_task_4) =complete_task_inc_goodwill(50:army)%
+condlist_0 = {!heli_exist_on_level} fail
+condlist_1 = {=kill_count_ge(agr_smart_terrain_1_6_army_trader_stalker_task_4:1)} complete
+condlist_2 = %=enter_heli%
+;--------------------------------------------------------------------------------------------------
 ; FIND LEVEL 1 TOOLKIT FOR KIRILOV TASK-
 
 [agr_smart_terrain_1_6_army_mechanic_stalker_task_1]
