--- a/res/gamedata_COC/configs/scripts/agroprom/agr_btr2.ltx
+++ b/res/gamedata_COC/configs/scripts/agroprom/agr_btr2.ltx
@@ -2,11 +2,11 @@
 active = ph_car@idle
 
 [ph_car@idle]
-path_walk 		= agr_btr2_walk
+;path_walk 		= agr_btr2_walk
 on_info1		= {=is_faction_enemy_to_actor(army)} ph_car
 
 [ph_car]
-path_walk 		= agr_btr2_walk
+;path_walk 		= agr_btr2_walk
 target 			= actor
 track_target    = true
 fire_repeat     = inf
