--- a/res/gamedata_COC/configs/scripts/bar/bar_arena_triger.ltx
+++ b/res/gamedata_COC/configs/scripts/bar/bar_arena_triger.ltx
@@ -41,7 +41,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(2)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(2) =clear_all_boosters%
 
 [sr_cutscene@fight_2]
 point = t_way
@@ -49,7 +49,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_3]
 point = t_way
@@ -57,7 +57,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_4]
 point = t_way
@@ -65,7 +65,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_5]
 point = t_way
@@ -73,7 +73,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_6]
 point = t_way
@@ -81,7 +81,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_7]
 point = t_way
@@ -89,7 +89,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_cutscene@fight_8]
 point = t_way
@@ -97,7 +97,7 @@ look = t_look
 global_cameffect = true
 outdoor = true
 cam_effector = arena
-on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3)%
+on_signal = cameff_end | sr_idle@fight %=enable_ui +bar_arena_fight_begin =bar_arena_weapon_slot(3) =clear_all_boosters%
 
 [sr_idle@fight]
 on_info = sr_idle@wait_finish
