*res* actor condition debug hud show wounds
bleed_speed_k added to configs
--------------------------------------------------------------
commit https://bitbucket.org/revo_lucas/call-of-chernobyl/commits/7f2de1b82dd40cc53b9a277f10ee007cd32913c3?at=main

--- a/res/gamedata_COC/configs/creatures/actor.ltx
+++ b/res/gamedata_COC/configs/creatures/actor.ltx
@@ -19,7 +19,7 @@ player_hud_section      = actor_hud
 terrain                          = actor_terrain
 
 kick_impulse			= 100.0				;For keybinded action to kick objects with mass of 20.0 or less
-
+bleed_speed_k			= 0.333				; TotalWounds * bleed_speed_k
 ;===NighVision========================================================================================
 snd_night_vision_on                      = weapons\nv_start
 snd_night_vision_off                     = weapons\nv_off
