--- a/res/gamedata_COC/configs/creatures/m_stalker.ltx
+++ b/res/gamedata_COC/configs/creatures/m_stalker.ltx
@@ -376,7 +376,7 @@ max_item_mass					= 10000000.0				; option for ALife Simulator
 inv_max_weight					= 10000000.0				; Допустимый вес инвентори
 MaxHealthValue					= 100				; option for ALife Simulator, range [0..200]
 smart_terrain_choose_interval	= 00:15:00
-
+bleed_speed_k					= 0.333
 ;---ONLINE ALIFE-------------------------------------------------------------------
 time_to_search_for_artefacts	= 0 ; in milliseconds
 distance_to_search_for_artefacts= 0.0	; in meters
